--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,6 @@ img {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-
   display: inline-block;
   padding: 10px 32px;
   border-radius: 4px;
@@ -276,8 +275,7 @@ img {
 
 .studio-button:hover,
 .studio-button:focus {
-  color: var(--accent);
-  background-color: var(--white);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .section {
@@ -313,6 +311,39 @@ img {
   margin-right: 0;
 }
 
+.principles-icons:not(:last-child) {
+  margin-right: 30px;
+}
+.principles-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  background-color: var(--team-bg);
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid var(--team-bg);
+  margin-bottom: 30px;
+}
+
+.principles-icons:hover .principles-icons-svg,
+.principles-icons:focus .principles-icons-svg {
+  fill: var(--accent);
+}
+
+.principles-icons:hover,
+.principles-icons:focus {
+  border-color: var(--accent);
+}
+
+.principles-icons-svg {
+  width: 70px;
+  height: 70px;
+  fill: var(--primary-text-cl);
+}
+
+/*О нас*/
 .about {
   padding-top: 0;
 }
@@ -377,6 +408,9 @@ img {
   background-color: var(--white);
   margin-right: 30px;
   padding-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-item:last-child {
@@ -446,7 +480,7 @@ img {
   width: 170px;
   height: 90px;
   background-color: var(--white);
-  border: 1px solid #afb1b8;
+  border: 1px solid var(--icon-gray);
   box-sizing: border-box;
   border-radius: 4px;
 }
@@ -456,9 +490,11 @@ img {
   fill: var(--accent);
 }
 
+.clients-link:hover,
+.clients-link:focus {
+  border-color: var(--accent);
+}
 .client-icons-svg {
-  width: 44.27px;
-  height: 49.23px;
   fill: var(--icon-gray);
 }
 /*Портфолио*/
@@ -489,6 +525,8 @@ img {
 .portfolio-button:focus {
   color: var(--white);
   background-color: var(--accent);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list .item:not(:last-child) {
@@ -504,6 +542,11 @@ img {
 .cards-item {
   flex-basis: calc(100% / 3 - 30px);
   background-color: var(--white);
+}
+.cards-item:hover,
+.cards-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .card-text {
   border: 1px solid #eeeeee;
@@ -539,6 +582,7 @@ address {
   padding-bottom: 60px;
   text-align: left;
   width: 231px;
+  margin-right: 70px;
 }
 .footer-address {
   display: block;
@@ -564,6 +608,7 @@ address {
 .footer-social-icons {
   display: flex;
   justify-content: center;
+  margin-top: 16px;
 }
 
 .footer-icons-item:not(:last-child) {
@@ -579,13 +624,29 @@ address {
   border-radius: 50%;
 }
 
-.footer-icons-link:hover .social-icons-svg,
-.footer-icons-link:focus .social-icons-svg {
-  fill: var(--accent);
+.footer-icons-link:hover,
+.footer-icons-link:focus {
+  background-color: var(--accent);
 }
 
+.footer-icons-link:hover .footer-icons-svg,
+.footer-icons-link:focus .footer-icons-svg {
+  fill: var(--white);
+}
 .footer-icons-svg {
   width: 20px;
   height: 20px;
   fill: var(--white);
+}
+
+.footer {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-social-text {
+  color: var(--white);
+  font-weight: 700;
+  line-height: 1.17;
+  text-transform: uppercase;
 }
